Update GitHub client credentials in .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GITHUB_CLIENT_ID=<GITHUB_CLIENT_ID>
-GITHUB_CLIENT_SECRET=<GITHUB_CLIENT_SECRET>
+GITHUB_CLIENT_ID=Ov23lipQrzc1yiFz8Czz
+GITHUB_CLIENT_SECRET=37265479a087efdb89b42bc322f21c8724ee3b36
